--- a/Prelude-Part-V.qmd
+++ b/Prelude-Part-V.qmd
@@ -2,19 +2,21 @@
 
 在進入學習統計方法的各章節之前，我(譯者)想要向同學們介紹另一份由丹麥奧爾堡大學(Aalborg University)溝通與心理學系(Department of Communication and Psychology)Jonas Lindeløv教授編寫的教程**基礎統計方法的線性模型學習取向**[^V-1]。 決定翻譯本書之前，我一直有如何統整推論統計方法學習課表的苦惱。見到Lindeløv的教程，還有採用jamovi與JASP試編教材之後，發覺這是一套值得華文世界的學生及統計學教師認識的教程。其實本書原作者Dani也在 @sec-ANOVA-as-a-linear-model 提到相同的觀念，只是這個觀念在原書的章節編排，一直走到多因子變異數分析，Dani才告訴讀者。
 
-在Lindeløv的原版教程發表後不到一年來，就由世界各地有志一同的教師翻譯成各國語言的版本，簡体中文版已由著名的網路統計知識交流學習論壇[統計之都](https://cosx.org/)的網友協作完成[^V-2]。由於簡体中文與繁體中文的統計學術語有別，而且Lindeløv的教程是以R語言為例，因此藉由翻譯這本**用jamovi上手統計學**的機會，我將原書的第五部分章節重新排列，改成如同Lindeløv教程一樣的順序，並在適當的段落，置入譯註提示讀者關於Lindeløv教程的說明及示範。在每一章屬於基礎統計方法的範例，都會附上一份包含線性模型示範的omv檔。從 @sec-Correlation-and-linear-regression 到 @sec-Categorical-data-analysis 標示示範檔案的部分，我都會在增加的**譯註**置入取得線性模型版示範檔案的連結。示範檔案裡有關線性模型版示範檔案的說明，都會集中於這個章節。讀者可根據學習進度，參考譯註提示，回到這個章節取得檔案及閱讀參考說明。
+在Lindeløv的原版教程發表後不到一年來，就由世界各地有志一同的教師翻譯成各國語言的版本，簡体中文版已由著名的網路統計知識交流學習論壇[統計之都](https://cosx.org/)的網友協作完成[^V-2]。由於簡体中文與繁體中文的統計學術語有別，而且Lindeløv的教程是以R語言為例，因此藉由翻譯這本**用jamovi上手統計學**的機會，我將原書的第五部分章節重新排列，改成如同Lindeløv教程一樣的順序，並在適當的段落，置入譯註提示讀者關於Lindeløv教程的說明及示範。在每一章屬於基礎統計方法的範例，都會附上一份包含線性模型版示範檔案。從 @sec-Correlation-and-linear-regression 到 @sec-Categorical-data-analysis 標示示範檔案的部分，我都會在增加的**譯註**置入取得線性模型版示範檔案的連結。示範檔案裡有關線性模型版示範檔案的說明，都會集中於這個章節。讀者可根據學習進度，參考譯註提示，回到這個章節取得檔案及閱讀參考說明。
 
 ## 教程前言 {-}
 
-> 本節部分改編自簡体中文版教程前言
+> 本節部分改編自[簡体中文版](https://cosx.org/2019/09/common-tests-as-linear-models/)教程前言
 
 大部分常見的統計檢定方法（t 檢定、相關係數檢定、變異數分析（ANOVA）、卡方檢定等），本質都是線性模型的一種特例或者是非常逼近的模型。這種優雅的簡潔性意味著我們並不需要掌握太多的技巧就能學習。具體來說，所有模型的來源都是多數學生在高中時期就學過的一元一次線性模型：$y = a \cdot x + b$ 。然而，很多基礎統計課程是把各種檢定方法分開教，給學生和老師們增加了很多不必要的麻煩。在學習每一個檢定方法的基本假設時，如果不是從線性模型切入，而是每個檢定方法都死記硬背，這讓學習的複雜度倍增。因此，我認為先教線性模型，然後對線性模型的一些特殊形式更改名稱是一種優秀的教學策略，這有助於更深刻地理解假設檢定。線性模型在次數主義學派、貝氏學派和基於置換的U檢定的統計推論方法之間是互通的，對初學者而言，從線性模型開始比從認識什麼是*p*值、型I錯誤、貝氏因子或其它術語更為友好。
 
 在入門課程教授到*無母數統計方法*的時候，可以避開**自我欺騙**的手段，直接告訴學生無母數檢定其實就是參數本質是*等級(rank)*的檢定方法。對學生來說，接受向量的概念，比相信你可以神奇地放棄各種母數統計方法所依賴的假設要好得多。實際上，在統計軟體如 JASP 裡，無母數檢定的貝氏等價模型就是使用潛在次序（Latent Rank）處理資料，而次數主義學派的無母數檢定方法用在樣本量 N > 15 的資料非常準確。
 
-本書**統計方法**的各章節，中文版保留原書的內容，讓讀者直接了解並比較傳統版與線性模型版的學習方法。使用本書教學的講師，可以根據個人教學經驗以及學生的回饋，採取合適的教學策略及課程規劃。有關輔助線性模型學習取向的相關資訊，教學者與學習者都可以取用Lindeløv提供的簡明整理表，英文閱讀能力不足的讀者請參考教程摘要的[簡体中文版](files/linear_tests_cheat_sheet.pdf)。
+本書**統計方法**的各章節，繁體中文版保留原書的內容及單元順序，讓讀者比較傳統版與線性模型版的學習方法差別。使用本書教學的講師，可以根據個人教學經驗以及學生的回饋，採取合適的教學策略及課程規劃。有關輔助線性模型學習取向的相關資訊，教學者與學習者都可以取用Lindeløv提供的簡明整理表，英文閱讀能力不足的讀者請參考教程摘要的[簡体中文版](files/linear_tests_cheat_sheet.pdf)。
 
-根據[教程摘要](https://www.fyears.org/tests-as-linear/linear_tests_cheat_sheet.html)，各種使用*無母數統計方法*分析的資料，樣本量至少要大於10，才能得到精確逼近的估計值。因此本書涉及無母數統計方法的範例，中文版提供的範例資料樣本都會是$N = 20$。此外，許多*無母數統計方法*的線性模型版示範檔案，會創建計算變項或轉換變項，將原始資料轉換為等級資料。轉換的函式語法如下：
+根據[教程摘要](https://www.fyears.org/tests-as-linear/linear_tests_cheat_sheet.html)，各種適用*無母數統計方法*的資料，樣本量至少要大於10，才能得到精確逼近的估計值。因此本書涉及無母數統計方法的範例，繁體中文版提供的範例資料樣本都會是至少是$N = 20$，符合樣本量條件的*無母數統計方法*示範說明及來源檔案，都會集中在這個章節。譯者開設的統計課程，採用Lindeløv教程的模式，平行教授連續變項及等級資料的統計方法，因此各章的學習順序不一定按照電子書的單元順序，請同學先看過以下各主題的對應單元提示，再進入各章閱讀及學習。
+
+此外，許多*無母數統計方法*的線性模型版示範檔案，會創建計算變項或轉換變項，將原始資料轉換為等級資料。除了 @sec-Correlation-and-linear-regression **相關與線性迴歸**的斯皮爾曼等級相關係數範例，其他統計方法示範資料的轉換函式如下：
 
 ```
 IF($source==0,0,IF($source>1,1,-1))*RANK($source)
@@ -78,26 +80,31 @@ IF($source==0,0,IF($source>1,1,-1))*RANK($source)
 
 ### 相關與線性迴歸 {-}
 
-我們運用 @fig-fig10-7 的虛構資料製作[資料檔案](files/10-correlatin-rank.omv)，示範等級資料的相關與迴歸分析。
-使用等級資料計算斯皮爾曼等級相關與迴歸分析，總樣本量N必須至少大於10，才能得到精確逼近的估計值。
+<!---我們運用 @fig-fig10-7 的虛構資料製作[資料檔案](files/10-correlatin-rank.omv)，示範等級資料的相關與迴歸分析。--->
+**相關與線性迴歸**的對應單元有 @sec-what-is-correlation , @sec-the-scatter-plot , @sec-what-is-linear-model , @sec-the-regression-coefficients-parameters , @sec-regression-model-fittedness, @sec-regression-estimations , 以及 @sec-regression-assumptions 。使用等級資料計算斯皮爾曼等級相關與迴歸分析，總樣本量N必須大於10，才能得到精確逼近的估計值。譯者開設的課程使用另一套教程"General Analyses for the Linear Model in Jamovi"開發的[範例資料](https://gamlj.github.io/mixed_example1.html)進行教學，教學錄影請見(預訂2023/5/6後上線)。
 
-此外，jamovi迴歸模組無法處理等級資料，因此[資料檔案](omv_files_for_screenshorts/10-correlatin-rank.omv)以R程式碼示範。如果同學有機會處理真正的等級資料，可選擇使用R或其他統計軟體如JASP進行迴歸分析。
+<!---此外，jamovi迴歸模組無法直接處理等級資料，必須用計算變數。因此[資料檔案](omv_files_for_screenshorts/10-correlatin-rank.omv)以R程式碼示範。--->如果同學有機會處理真正的等級資料，也可以選擇使用R或其他統計軟體如JASP進行連續變項或等級資料的迴歸分析。
+
+
+### 單一樣本及相依樣本 {-}
+
+**單一樣本及相依樣本**的對應單元有 @sec-The-one-sample-t-test , @sec-the-paired-t-test , @sec-the-one-tail-t-test , @sec-t-test-effect-size , @sec-Checking-the-normality-of-a-sample , @sec-nonparameter-rank-test
 
 ### 比較兩組平均值 {-}
 
+**比較兩組平均值**的對應單元有 @sec-the-independent-samples-t-test-student-test, @sec-the-one-tail-t-test , @sec-t-test-effect-size , @sec-Checking-the-normality-of-a-sample , @sec-nonparameter-rank-test
 
+### 單因子變異數分析 {-}
 
-### 比較多組平均值(單因子變異數分析) {-}
-
-
+對應 @sec-Comparing-several-means-one-way-ANOVA **單因子變異數分析** 
 
 ### 多因子變異數分析 {-}
 
-
+對應 @sec-Factorial-ANOVA **多因子變異數分析**
 
 ### 類別資料分析 {-}
 
-
+對應 @sec-Categorical-data-analysis **類別資料分析**
 
 
 
