update for instruction of chapter 11

--- a/Prelude-Part-V.qmd
+++ b/Prelude-Part-V.qmd
@@ -1,5 +1,11 @@
 # 線性模型的學習取向 {.unnumbered}
 
+```{r}
+#| include: FALSE
+source("files/11_two_means.R")
+
+```
+
 在進入學習統計方法的各章節之前，我(譯者)想要向同學們介紹另一份由丹麥奧爾堡大學(Aalborg University)溝通與心理學系(Department of Communication and Psychology)Jonas Lindeløv教授編寫的教程**基礎統計方法的線性模型學習取向**[^V-1]。 決定翻譯本書之前，我一直有如何統整推論統計方法學習課表的苦惱。見到Lindeløv的教程，還有採用jamovi與JASP試編教材之後，發覺這是一套值得華文世界的學生及統計學教師認識的教程。其實本書原作者Dani也在 @sec-ANOVA-as-a-linear-model 提到相同的觀念，只是這個觀念在原書的章節編排，一直走到多因子變異數分析，Dani才告訴讀者。
 
 在Lindeløv的原版教程發表後不到一年來，就由世界各地有志一同的教師翻譯成各國語言的版本，簡体中文版已由著名的網路統計知識交流學習論壇[統計之都](https://cosx.org/)的網友協作完成[^V-2]。由於簡体中文與繁體中文的統計學術語有別，而且Lindeløv的教程是以R語言為例，因此藉由翻譯這本**用jamovi上手統計學**的機會，我將原書的第五部分章節重新排列，改成如同Lindeløv教程一樣的順序，並在適當的段落，置入譯註提示讀者關於Lindeløv教程的說明及示範。在每一章屬於基礎統計方法的範例，都會附上一份包含線性模型版示範檔案。從 @sec-Correlation-and-linear-regression 到 @sec-Categorical-data-analysis 標示示範檔案的部分，我都會在增加的**譯註**置入取得線性模型版示範檔案的連結。示範檔案裡有關線性模型版示範檔案的說明，都會集中於這個章節。讀者可根據學習進度，參考譯註提示，回到這個章節取得檔案及閱讀參考說明。
@@ -85,14 +91,56 @@ IF($source==0,0,IF($source>1,1,-1))*RANK($source)
 
 <!---此外，jamovi迴歸模組無法直接處理等級資料，必須用計算變數。因此[資料檔案](omv_files_for_screenshorts/10-correlatin-rank.omv)以R程式碼示範。--->如果同學有機會處理真正的等級資料，也可以選擇使用R或其他統計軟體如JASP進行連續變項或等級資料的迴歸分析。
 
+#### 泛統計方法的適用條件
+
+所有基礎統計方法幾乎共享相同的適用條件(assumptions)，包括每個資料數值的獨立性(independence of data points)，殘差的常態性(normality of residuals)，以及變異同質性(homoscedasticity)。線性迴歸模性可看到些條件以及檢核方法，透過迴歸模型認識其他統計方法，就能自然知道要符合那些條件，統計分析才有意義。**需要讀者了解的用語問題**，許多中文統計書會用**假設**而非**適用條件**，用了幾次jamovi，讀者應該發現許多模組有*assumption check*的選項，其實是提供該分析是否符合適用條件的檢測。
+
+#### 以線性模型解讀自由度
+
+這本**用jamovi上手統計學**並沒有一個專門的小節，好好解釋什麼是自由度(degress of freedom)，做為補充章節，剛好在此為讀者提供一點小小的說明。由於剛好重新學習線性模型與線性代數的知識，我參考翻譯本書時在閱讀的另一本中文教科書：黃志勝先生撰寫的「[機器學習的統計基礎 : 深度學習背後的核心技術](https://www.tenlong.com.tw/products/9789863126744)」，其中第4章講自由度的這一節，黃先生給的定義是「包含N個變數的線性模型中，不受限制的變數個數」(該書沒有這一句話，是我重新消化組織的)，我們能透過以下範例來逐漸認識。
+
+1. 簡單迴歸式 $y = a + bx$。$y$與$x$都是變數，要使等號左右兩邊的數值相等，必須限制其中一個變數等於固定的數值，因此自由度$df = n - k = 2 - 1 = 1$。
+
+2. 多元迴歸式 $y = a + b_1 x_1 +b_2 x_2$。這個等式有三個變數，要使等號左右兩邊的數值相等，同樣必須限制其中一個變數等於固定的數值，因此自由度$df = n - k = 3 - 1 = 2$。
+
+3. 我們知道樣本平均值($\bar{X}$)是母群平均值($\mu$)的最佳估計值，公式是$\bar{X} = \frac{X_1 + X_2 + \dots + X_n}{n}$，其中有n個變數，每個變數都是隨機值且彼此獨立，沒有任何一個變數要受到限制，因此自由度$df = n - k = n - 0 = n$。
+
+4. 樣本變異數($S^2$)是母群平均值($\sigma^2$)的最佳估計值，公式是$S^2 = \frac{\sum_{n=1}^{n}(X_i - \bar{X})^2}{n-1}$。這個公式也有同樣的n個隨機且彼此獨立的變數，但是公式中的平均值$\bar{X}$來自樣本平均值公式，所以可知$X_n = n\bar{X} - X_1 - X_2 - \dots - X_{n-1}$，也就是說$X_n$是受限制的變數，因此樣本變異數的自由度$df = n - k = n - 1$。
 
 ### 單一樣本及相依樣本 {-}
 
-**單一樣本及相依樣本**的對應單元有 @sec-The-one-sample-t-test , @sec-the-paired-t-test , @sec-the-one-tail-t-test , @sec-t-test-effect-size , @sec-Checking-the-normality-of-a-sample , @sec-nonparameter-rank-test
+**單一樣本及相依樣本**的對應單元有 @sec-The-one-sample-t-test , @sec-the-paired-t-test , @sec-the-one-tail-t-test , @sec-t-test-effect-size , @sec-Checking-the-normality-of-a-sample , @sec-nonparameter-rank-test 。使用等級資料進行無母數統計分析，最小樣本量必須多於14，如果是採用線性模型教程，建議不要使用 @sec-nonparameter-rank-test 的範例，將連續資料的範例轉換為等級資料即可。
+
+- 學習用jamovi檔案與錄影說明，預計於2023/5/10之後上線。
 
 ### 比較兩組平均值 {-}
 
-**比較兩組平均值**的對應單元有 @sec-the-independent-samples-t-test-student-test, @sec-the-one-tail-t-test , @sec-t-test-effect-size , @sec-Checking-the-normality-of-a-sample , @sec-nonparameter-rank-test
+**比較兩組平均值**的對應單元有 @sec-the-independent-samples-t-test-student-test, @sec-the-independent-samples-t-test-welch-test, @sec-the-one-tail-t-test , @sec-t-test-effect-size , @sec-Checking-the-normality-of-a-sample , @sec-nonparameter-rank-test。使用等級資料進行無母數統計分析，最小樣本量必須多於10，如果是採用線性模型教程，建議不要使用 @sec-nonparameter-rank-test 的範例，將連續資料的範例轉換為等級資料即可。
+
+Welch's t檢定是無法使用jamovi展示線性模型示範的統計方法，但是近年採用獨立組設計的心理學研究，被呼籲使用Welch's t檢定的建議越來越多，因為獨立組設計的行為科學資料經常違反變異數同質性的適用條件。在此使用R套件，展示使用線性模型輸出 @sec-the-independent-samples-t-test-welch-test 的範例。
+
+**R程式碼**
+
+```
+df <- read_csv("files/Harpo.csv")
+
+summary(nlme::gls(grade ~ 1 + as.factor(tutor), weights = nlme::varIdent(form=~1|tutor), method="ML", data=df))
+```
+
+**輸出結果**
+
+```
+Generalized least squares fit by maximum likelihood
+  Model: grade ~ 1 + as.factor(tutor)
+
+Coefficients:
+                              Value Std.Error  t-value p-value
+(Intercept)                74.53333  2.316009 32.18179  0.0000
+as.factor(tutor)Bernadette -5.47778  2.688237 -2.03768  0.0502
+```
+
+- 學習用jamovi檔案與錄影說明，預計於2023/5/10之後上線。
+
 
 ### 單因子變異數分析 {-}
 
